# lingtai-node

./: .gitignore  README.md  REVIEW_REPORT.md  pyproject.toml
docs/: BLOG_NERVAFS.docx  BLOG_NERVAFS.md  COMMUNICATION_MAPPING.md  DESIGN_PHILOSOPHY.md
scripts/: watch.py
skills/lingtai-node/: SKILL.md
skills/lingtai-node/communication/: SKILL.md
skills/lingtai-node/handover/: SKILL.md
src/lingtai_node/: __init__.py  __main__.py  avatar_manager.py  codex_manager.py  covenant_manager.py  email_manager.py  heartbeat.py  library_manager.py  mapping.py  server.py  system_manager.py
src/lingtai_node/contracts/: NODE_CONTRACT.md  __init__.py
src/lingtai_node/runtimes/: __init__.py  base.py
src/lingtai_node/runtimes/claude_code/: __init__.py  session.py  watcher.py
src/lingtai_node/runtimes/lingtai/: __init__.py  runtime.py
src/lingtai_node/runtimes/openai_codex/: __init__.py  session.py  watcher.py
src/lingtai_node/templates/: AGENTS.md  CLAUDE.md  __init__.py
templates/: CLAUDE.md  handover.md  memory.md
tests/: conftest.py  test_contract.py  test_lingtai_runtime.py  test_runtime_map.py
